# ai_backend_framework

./: .gitignore  context.md  plan.md  pyproject.toml  readme.md  requirements.txt  userguide.md
ai-backend-framework/: .clineignore  .clinerules  .env.example  .gitignore  readme.md  userguide.md
ai-backend-framework/ai_flow_engine/: __init__.py
ai-backend-framework/ai_flow_engine/config/: __init__.py  loader.py  schema.py
ai-backend-framework/ai_flow_engine/core/: __init__.py  base_node.py  context.py  debugger.py  engine.py
ai-backend-framework/ai_flow_engine/nodes/: __init__.py  condition_node.py  image_analysis_node.py  json_parse_node.py  llm_node.py  loop_node.py  parallel_node.py  prompt_node.py  web_search_node.py
ai-backend-framework/api/: __init__.py  main.py
ai-backend-framework/examples/: __init__.py  debug_course_outline_json_load.py  debug_course_outline_parse.py  debug_course_outline_repair.py  selftest_json_transform_node.py  simple_pipeline.py  vacancy_analyzer.json
ai-backend-framework/pipelines/: ai_mentor.json  code_validator.json  course_outline.json  lesson_practice.json  lesson_theory.json
